<resources>
    <string name="app_name">InGame</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_to_ingame">Welcome To InGame</string>
    <string name="home">Home</string>
    <string name="members">Members</string>
    <string name="attendance">Attendance</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Events">Events</string>
    <string name="_10_5">10/5</string>
    <string name="members_events">Members/Events :</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="add_event">Add Event</string>
    <string name="fabformembers">fabForMembers</string>
    <string name="memberlist">MemberList</string>
    <string name="member_avatar">Member avatar</string>
    <string name="member_1">Member 1</string>
    <string name="organisation_department">organisation department</string>
    <string name="deletemember">deleteMember</string>

    <string name="department">department</string>
    <string name="member_name">member name</string>


</resources>