<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ingame.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_members"
        android:name="com.example.ingame.view.MembersFragment"
        android:label="@string/members"
        tools:layout="@layout/fragment_members" />

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.example.ingame.view.AttendanceFragment"
        android:label="@string/attendance"
        tools:layout="@layout/fragment_attendance" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.ingame.view.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>